# rust-book-notes

./: .gitignore  README.md
01-getting-started/: main
05-structs/structs/src/: main.rs
06-enums-and-pattern-matching/enums_and_pm/src/: main.rs
09.0-guessing-game-V2/guessing_game_v2/: Cargo.toml
09.5-guessing-game-V2/: README.md
1-getting-started/: README.md
10.1-generic-types/generics/src/: main.rs
10.2-traits/traits/: README.md
10.2-traits/traits/src/: main.rs
10.3-lifetimes/lifetimes/src/: main.rs
12-cli-app/: README.md
13-functional-features/: README.md
14-cargo-crates/my_crate/: Cargo.toml
2-guessing-game/: README.md
4-ownership/: README.md
6-enums-and-pattern-matching/: README.md
7-modules/: README.md
8-common-collections/: README.md
8-common-collections/collections/: Cargo.toml
9-error-handling/: README.md
9.5-guessing-game-V2/guessing_game_v2/: Cargo.toml  README.md
c10.1-generic-types/: README.md
c10.2-traits/: README.md
chapters/01-getting-started/: README.md
chapters/02-guessing-game/: README.md
chapters/03-programming-concepts/: README.md
chapters/04-ownership/: Ownership-gpt4.md
chapters/05-structs/: README.md
chapters/06-enums-and-pattern-matching/: README.md
chapters/07-modules/: README.md
chapters/11-tests/: README.md
chapters/14-cargo-crates/: README.md
chapters/15-smart-pointers/: README.md
chapters/16-concurrency/: README.md
chapters/17-object-oriented-features/: README.md
chapters/19-advanced-concepts/: README.md
web-server/: README.md
web-server/server/: 404.html  index.html
(+39 files in other folders)
